// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteRequestQueryParams should append the request query param when overwrite is false 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "truefoo",
  },
]
`;

exports[`overwriteRequestQueryParams should disable the request query param 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": true,
    "key": "raw",
    "value": "true",
  },
]
`;

exports[`overwriteRequestQueryParams should overwrite the request query param 1`] = `
Array [
  Object {
    "description": Object {
      "content": "Include raw response. Mostly used for debugging purposes",
      "type": "text/plain",
    },
    "disabled": false,
    "key": "raw",
    "value": "foo",
  },
]
`;

exports[`overwriteRequestQueryParams should remove to the query param when remove is true 1`] = `Array []`;
